# RucGraph

./: CMakeLists.txt  README.md
include/CPU_adj_list/: CPU_adj_list.hpp  binary_save_read_vector_of_vectors.hpp  parse_string.hpp  sorted_vector_binary_operations.hpp
include/CPU_adj_list/algorithm/: CPU_BFS.hpp  CPU_Community_Detection.hpp  CPU_PageRank.hpp  CPU_connected_components.hpp  CPU_shortest_paths.hpp  CPU_sssp_pre.hpp
include/GPU_csr/: GPU_csr.hpp
include/GPU_csr/algorithm/: GPU_BFS.cuh  GPU_Community_Detection.cuh  GPU_PageRank.cuh  GPU_connected_components.cuh  GPU_shortest_paths.cuh  GPU_sssp_pre.cuh  WCC.cuh
include/LDBC/: checker.hpp  ldbc.hpp
src/CPU_adj_list/: CPU_example.cpp
src/GPU_csr/: GPU_example.cu
src/LDBC/: LDBC_CPU_adj_list.cpp  LDBC_GPU_csr.cu
